	* Use a smaller logical resolution for high resolution displays, e.g. 960x540 for 1920x1080
	* In campaign mode, the map choice screen remembers the region of a failed mission (the user has to select a different region)
	* New game option "Manual Carryall Drops"
	* Mentat's eyes are following the cursor
	* Clicking on mentat's eyes makes him blink and clicking on mentat's mouth makes him open it
	* Save screenshots as PNG
	* 64-bit builds for Windows
	* Store complete map in save games (and replays) of single player custom games
	* 18 new maps by heinrich arkonnen
	* 4 new maps by Kuffar
	* Bugfix (Bug #32): Repaired units getting removed from control group (Reported by Chan Kun Wa)
	* Bugfix (Bug #36): AI non-hostile and inactive (Reported by Chan Kun Wa)
	* Bugfix (Bug #40): Bullets from gun turrets hit own building, e.g. other turrets (Reported by Dream Worker)
	* Bugfix (Bug #50): Changing the player's name while playing a mission makes starting the next mission or restarting the current mission crash
	* Bugfix (Bug #62): Worms spawn under rock (Reported by heinrich arkonnen)
	* Bugfix (Bug #67): Saving a game under Windows with (for filenames) illegal characters results in no save at all (Reported by vangrunz)
	* Bugfix (Bug #70): Changing the player name makes replays crash
	* Bugfix (Bug #71): Ornithopter animation is too fast (Thanks to Kartones for the patch)
	* Bugfix (Bug #72): Texture sizes were too big for older hardware; now textures are smaller than 2048x2048 (Reported by gdm85)
	* Bugfix (Bug #73): Shift the level of the voc files so that the last sample is 128 (Reported by Vortaka)
	* Bugfix (Bug 3610246): Mentat help used wrong houses (Reported by kuffar)

version 0.96.3
	* Full-featured map editor with support of Dune2-compatible maps as well as the extended map format
	* Integration of OpenSuperDune (a replacement to the original SuperDune)
	* Unit/Structure stats and the techtree is read from a config file